# find-file-type

./: .gitignore  .pre-commit-config.yaml  GITHUB_CI_SETUP.md  LICENSE  PRE_COMMIT_SETUP.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/sample_files/: data.json  hello.py  notes.txt  python_script  script.js
src/fft/: __init__.py  cli.py  detector.py  types.py
tests/: __init__.py  test_cli.py  test_detector.py  test_types.py
